--- a/style.css
+++ b/style.css
@@ -234,8 +234,7 @@ h4{
 }
 /* Modal */
 
-
-.modal {
+.modal{
     background-color: rgba(0, 0, 0, 0.591);
     position: fixed;
     z-index: 1;
@@ -284,7 +283,126 @@ h4{
 	cursor: pointer;
 } 
 
+/* Resume Modal */
+
+.modalResume {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    overflow-y: auto;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgba(0, 0, 0, 0.547);
+}
+
+
+.resume {
+    margin: auto;
+    display: block;
+    width: 900px;
+    max-width: 600px;
+}
+
+.resume img{
+    width: 600px;
+    height: 800px;
+}
+
+.closeRes {
+    position: absolute;
+    top: 50px;
+    right: 250px;
+    color: rgb(248, 241, 241);
+    background-color: #fc1d00c8;
+    font-size: 40px;
+    font-weight: bold;
+    padding: .3em;
+    font-size: small;
+    cursor: pointer;
+}
 
 
 
+@media (min-width: 0) and (max-width: 410px) {
+    
+    body {
+    background-color: rgba(65, 62, 43, 0.896);
+    overflow: auto;
+    }
+    
+    .navbar, .container, .picture{
+        display: none;
+    }
+    
+    .topContainer{
+        display: inline-flex;
+        padding: 20px;
+        text-align: left;
+        cursor: pointer;
+        
+    }
 
+    .mediaImg{
+        width: 300px;
+        height: 300px;
+    }
+
+    .mediaHeader{
+        
+        width:100%;
+        margin:0;
+    }
+    .mediaH1, .mediaH3{
+        color: white;
+        text-align: center;    
+    }
+
+    .mediaH1{
+        font-size: 60px;
+        margin-left: 20px;
+        font-style: italic;
+    }
+
+    .mediaH3{
+        font-size: 30px;
+        margin-left: -60px;
+        color: #229f9f;
+    }
+
+/* Accordion Section*/
+    .accordion{
+        width:100%;
+        margin:0;
+    }
+    
+    .accordion h1{
+    font-size:26px;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom:0px;
+    margin-top:0px;
+    background-color:gainsboro;
+    padding-top:7px;padding-bottom:7px;
+    border:1px solid darkgrey;
+    border-radius:3px;
+    }
+
+    .accordion h1:hover{
+        cursor:pointer;
+    }
+
+    .accordion div{
+        display:none;
+        padding:10px;
+        height:100px;
+        line-height:20px;
+        border:1px solid gray;
+        border-radius:3px;
+    }
+    
+
+}
