--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ p{
 .btnN{
     width: 20px;
     height: 20px;
+    margin-top: 80px;
     align-self: center;
 	background: #727672;
 	padding: 10px;
@@ -187,12 +188,15 @@ p{
 
 .btnP{
     width: 20px;
+    margin-top: 80px;
+    margin-right: 10px;
     height: 20px;
     align-self: center;
 	background: #727672;
 	padding: 10px;
 	border-radius: 40%;
 	box-shadow: -3px -3px #fc1d00;
+    font-size: large;
 }
 
 .btnN:hover{
@@ -325,20 +329,36 @@ h4{
     cursor: pointer;
 }
 
-
+.mediaImg{
+    width: 1px;
+    height: 1px;
+}
+.mediaH3{
+    font-size: 1px;
+}
+footer img{
+    width: 1px;
+    height: 1px;
+}
 
 @media (min-width: 0) and (max-width: 410px) {
     
     body {
-    background-color: rgba(65, 62, 43, 0.896);
+    background-color: rgba(30, 34, 66, 0.896);
     overflow: auto;
     }
     
+
     .navbar, .container, .picture{
         display: none;
     }
     
+    .media{
+        width:100%;
+        margin:0;
+    }
     .topContainer{
+        
         display: inline-flex;
         padding: 20px;
         text-align: left;
@@ -347,12 +367,11 @@ h4{
     }
 
     .mediaImg{
-        width: 300px;
-        height: 300px;
+        width: 350px;
+        height: 350px;
     }
 
     .mediaHeader{
-        
         width:100%;
         margin:0;
     }
@@ -362,13 +381,13 @@ h4{
     }
 
     .mediaH1{
-        font-size: 60px;
+        font-size: 65px;
         margin-left: 20px;
         font-style: italic;
     }
 
     .mediaH3{
-        font-size: 30px;
+        font-size: 40px;
         margin-left: -60px;
         color: #229f9f;
     }
@@ -401,5 +420,12 @@ h4{
         border-radius:3px;
     }
     
+    /* Footer */
+
+    footer img{
+        background-color: transparent;
+        width: 100px;
+        height: 100px;
+    }
 
 }
