--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 *{
-    margin: 0 auto;  
+margin: 0 auto;  
 }
 
 body{
-    min-width: 800px;
-    background-color: black;
-    margin: 0;
+min-width: 800px;
+background-color: black;
+margin: 0;
 }
 
 /* NAV */
@@ -64,7 +64,7 @@ margin-left: 180px;
 font-size: 25px; 
 border: none;
 outline: none;
-color: red;
+color: gold;
 padding: 10px;
 background-color: inherit;
 font-family: cursive;
@@ -74,7 +74,7 @@ transition: all .7s ease;
 }
 
 .navbar a:hover, .subnav:hover .subnavbtn {
-background:rgba(255, 0, 0, 0.592);
+background:rgba(255, 242, 0, 0.592);
 color: black;
 border-radius:5px;
 }
@@ -106,331 +106,476 @@ justify-content: center;
 
 /* Carousel */
 .info{
-    /* border: 1px solid white; */
-    width: 300px;
-    height: 200px;
-    margin-top: 60px;
+/* border: 1px solid white; */
+width: 300px;
+height: 200px;
+margin-top: 60px;
 }
 
 h2{
-    color: white;
-    
+color: white;
+
 }
 
 h3{
-    color: white;
-    height: 30px;
-    width: 20px;
-    padding-left: 100px;
+color: white;
+height: 30px;
+width: 20px;
+padding-left: 100px;
 }
 
 .container{
-    width: 980px;
+width: 980px;
 }
 
 
 /* ::content */
 .carousel{
-    /* border: 1px solid white; */
-    height: 100px;
-    display:flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    
+/* border: 1px solid white; */
+height: 100px;
+display:flex;
+flex-direction: row;
+justify-content: flex-end;
+
+}
+
+.projBtn{
+margin-top: 200px;
+height: 20px;
+margin-left: 80px;
+font-size: 25px;
+text-decoration: none;
+text-align: center;
+padding-top: 10px;
+}
+
+
+.projBtn{
+width: 220px;
+height: 50px;
+border: none;
+outline: none;
+color: #218e5d;
+background: #111;
+cursor: pointer;
+position: relative;
+z-index: 0;
+border-radius: 10px;
+}
+
+.projBtn:before {
+content: '';
+background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+position: absolute;
+top: -2px;
+left:-2px;
+background-size: 400%;
+z-index: -1;
+filter: blur(5px);
+width: calc(100% + 4px);
+height: calc(100% + 4px);
+animation: glowing 20s linear infinite;
+opacity: 0;
+transition: opacity .3s ease-in-out;
+border-radius: 10px;
+}
+
+.projBtn:active {
+color: #000
+}
+
+.projBtn:active:after {
+background: transparent;
+}
+
+.projBtn:hover:before {
+opacity: 1;
+}
+
+.projBtn:after {
+z-index: -1;
+content: '';
+position: absolute;
+width: 100%;
+height: 100%;
+background: #111;
+left: 0;
+top: 0;
+border-radius: 10px;
+}
+
+@keyframes glowing {
+0% { background-position: 0 0; }
+50% { background-position: 400% 0; }
+100% { background-position: 0 0; }
 }
 
 .carousel-content{
-    /* border: 1px solid white; */
-    height: 320px;
-    width: 550px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    align-content: center;
-    margin: 50px;
-    margin-right: 100px ;
+/* border: 1px solid white; */
+height: 320px;
+width: 550px;
+display: flex;
+justify-content: space-around;
+flex-direction: row;
+align-content: center;
+margin: 50px;
+margin-right: 100px ;
 }
 
 .carouselImg{
-    display: flex;
-    width: 450px;
-    height: 380px;
-    border: 20px solid rgba(42, 89, 57, 0.899);
-    border-style: ridge;
+display: flex;
+width: 450px;
+height: 360px;
+border: 20px solid rgba(42, 89, 57, 0.899);
+border-style: ridge;
 }
 
 .carouselImg img{
-    width: 300px;
-    height: 350px;
-	border-radius: 10px;
-	display: none;
+width: 300px;
+height: 350px;
+border-radius: 10px;
+display: none;
 }
 
 .carouselImg img:first-of-type {
-    display: block;
+display: block;
 }  
 
 p{
-    color: white;
-    text-align: center;
+color: white;
+text-align: center;
 }
 
 .btnN{
-    width: 20px;
-    height: 20px;
-    margin-top: 80px;
-    align-self: center;
-	background: #727672;
-	padding: 10px;
-	border-radius: 40%;
-	box-shadow: 3px 3px #0d00fc;
+width: 20px;
+height: 20px;
+margin-top: 80px;
+align-self: center;
+background: #727672;
+padding: 10px;
+border-radius: 40%;
+box-shadow: 3px 3px #0d00fc;
 }
 
 .btnP{
-    width: 20px;
-    margin-top: 80px;
-    margin-right: 10px;
-    height: 20px;
-    align-self: center;
-	background: #727672;
-	padding: 10px;
-	border-radius: 40%;
-	box-shadow: -3px -3px #fc1d00;
-    font-size: large;
+width: 20px;
+margin-top: 80px;
+margin-right: 10px;
+height: 20px;
+align-self: center;
+background: #727672;
+padding: 10px;
+border-radius: 40%;
+box-shadow: -3px -3px #fc1d00;
+font-size: large;
 }
 
 .btnN:hover{
-	cursor: pointer;
-	background: #0d00fc;
-	box-shadow: 3px 3px #727672;
+cursor: pointer;
+background: #0d00fc;
+box-shadow: 3px 3px #727672;
 }
 
 .btnP:hover{
-    cursor: pointer;
-	background: #fc1d00;
-	box-shadow: -3px -3px #727672;
+cursor: pointer;
+background: #fc1d00;
+box-shadow: -3px -3px #727672;
 }
 
 
 /* user */
 .picture{
-    width: 980px;
-    opacity: .8;
-    margin-top: -270px;   
+width: 980px;
+opacity: .8;
+margin-top: -270px;   
 }
 
 .picture img{
-    height: 350px;
-    width: 350px;
+height: 350px;
+width: 350px;
 }
 
 h2{
-    color: #218e5d;
-    font-size: 30px;
+color: #218e5d;
+font-size: 30px;
 }
 
 h4{
-    color: antiquewhite;
-    font-size: 20px;
+color: antiquewhite;
+font-size: 20px;
 }
+
+h6{
+    color: rgba(160, 155, 125, 0.807);
+font-size: 20px;
+}
+
 .info{
-    padding-left: 80px;
+padding-left: 80px;
 }
 /* Modal */
 
 .modal{
-    background-color: rgba(0, 0, 0, 0.591);
-    position: fixed;
-    z-index: 1;
-    overflow: auto;
-    display: none;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+background-color: rgba(0, 0, 0, 0.591);
+position: fixed;
+z-index: 1;
+overflow: auto;
+display: none;
+top: 0;
+left: 0;
+height: 100%;
+width: 100%;
 }
 .form-container{
-    background-color: rgba(33, 100, 176, 0.752);
-	height: 250px;
-	width: 300px;
-	margin: 150px auto ;
-	padding: 0;
-	line-height: 120%;
-    color: white;
-    text-align: left;
+background-color: rgba(33, 100, 176, 0.752);
+height: 250px;
+width: 300px;
+margin: 150px auto ;
+padding: 0;
+line-height: 120%;
+color: white;
+text-align: left;
 }
 
 .form-name, .email, .form-subject, .form-description{
-    width: 280px;
+width: 280px;
 }
 
 .form-description{
-    height: 50px;
-    margin-bottom: 10px;
+height: 50px;
+margin-bottom: 10px;
 }
 
 .form{
-    height: 300px;
-    width: 300px;
-    padding: 5px;
+height: 300px;
+width: 300px;
+padding: 5px;
 }
 
 .pop-button {
-	padding: 3px;
-    margin: 20px auto;
-	background-color: #13562c;
-	border: none;
-	outline: none;
-	border-radius: 3px;
-	color: white;
-	font-family: cursive;
-	cursor: pointer;
+padding: 3px;
+margin: 20px auto;
+background-color: #13562c;
+border: none;
+outline: none;
+border-radius: 3px;
+color: white;
+font-family: cursive;
+cursor: pointer;
 } 
 
 /* Resume Modal */
 
 .modalResume {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    overflow-y: auto;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto; 
-    background-color: rgba(0, 0, 0, 0.547);
+display: none;
+position: fixed;
+z-index: 1;
+padding-top: 100px;
+overflow-y: auto;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+overflow: auto; 
+background-color: rgba(0, 0, 0, 0.547);
 }
 
 
 .resume {
-    margin: auto;
-    display: block;
-    width: 900px;
-    max-width: 600px;
+margin: auto;
+display: block;
+width: 900px;
+max-width: 600px;
 }
 
 .resume img{
-    width: 600px;
-    height: 800px;
+width: 600px;
+height: 800px;
 }
 
 .closeRes {
-    position: absolute;
-    top: 50px;
-    right: 250px;
-    color: rgb(248, 241, 241);
-    background-color: #fc1d00c8;
-    font-size: 40px;
-    font-weight: bold;
-    padding: .3em;
-    font-size: small;
-    cursor: pointer;
+position: absolute;
+top: 50px;
+right: 250px;
+color: rgb(248, 241, 241);
+background-color: #fc1d00c8;
+font-size: 40px;
+font-weight: bold;
+padding: .3em;
+font-size: small;
+cursor: pointer;
 }
 
 .mediaImg{
-    width: 1px;
-    height: 1px;
+width: 1px;
+height: 1px;
 }
 .mediaH3{
-    font-size: 1px;
+font-size: 1px;
 }
 footer a{
-    color: black;
+color: black;
 }
 
 @media (min-width: 0) and (max-width: 410px) {
-    
-    body {
+
+body {
     background-color: rgba(30, 34, 66, 0.896);
     overflow: auto;
 
-    }
+}
+
+
+.navbar, .container, .picture{
+    display: none;
+}
+
+.media{
+    width:100%;
+    margin:0;
+}
+.topContainer{
     
+    display: inline-flex;
+    padding: 20px;
+    text-align: left;
+    cursor: pointer;
+    margin-bottom: 50px;
+}
 
-    .navbar, .container, .picture{
-        display: none;
-    }
-    
-    .media{
-        width:100%;
-        margin:0;
-    }
-    .topContainer{
-        
-        display: inline-flex;
-        padding: 20px;
-        text-align: left;
-        cursor: pointer;
-        margin-bottom: 50px;
-    }
+.mediaImg{
+    width: 350px;
+    height: 350px;
+}
 
-    .mediaImg{
-        width: 350px;
-        height: 350px;
-    }
+.mediaHeader{
+    width:100%;
+    margin:0;
+}
+.mediaH1, .mediaH3{
+    color: white;
+    text-align: center;    
+}
 
-    .mediaHeader{
-        width:100%;
-        margin:0;
-    }
-    .mediaH1, .mediaH3{
-        color: white;
-        text-align: center;    
-    }
+.mediaH1{
+    font-size: 65px;
+    margin-left: 20px;
+    font-style: italic;
+}
 
-    .mediaH1{
-        font-size: 65px;
-        margin-left: 20px;
-        font-style: italic;
-    }
-
-    .mediaH3{
-        font-size: 40px;
-        margin-left: -60px;
-        color: #229f9f;
-    }
+.mediaH3{
+    font-size: 40px;
+    margin-left: -60px;
+    color: #229f9f;
+}
 
 /* Accordion Section*/
-    .accordion{
-        width:100%;
-        margin:0;
-    }
-    
-    .accordion h1{
-    font-size: 30px;
+.accordion{
+    width:100%;
+    margin:0;
+}
+
+.accordion h1{
+    font-size: 40px;
     text-align: center;
     margin-bottom: 0;
     background-color:rgb(219, 219, 219);
     padding-top:10px;
     padding-bottom:10px;
     border: 1px solid black;
-    }
+}
 
-    .accordion h1:hover{
-        cursor:pointer;
-    }
+.accordion .accordion-content{
+    font-size: 35px;
+    color: white;
+}
 
-    .accordion div{
-        display:none;
-        padding:10px;
-        height:100px;
-        border:1px solid black;
-        border-radius:3px;
+.accordion h1:hover{
+    cursor:pointer;
+}
+
+.accordion div{
+    display:none;
+    padding:10px;
+    height:150px;
+    border:1px solid black;
+    border-radius:3px;
+}
+
+/* Footer */
+
+footer{
+    width:100%;
+    margin:0;
+    display: flex;
+}
+
+.fa{
+    font-size: 100px;
+    margin-top: 50px;
+    color: #fc1d00;
+}
+
+/* Projects */
+
+    .row{
+    display: flex;
+    margin: 40px;
     }
     
-    /* Footer */
-
-    footer{
-        width:100%;
-        margin:0;
-        display: flex;
+    .box {
+        background-color: #182343d6;
+        height: 400px;
+        position: relative;
+        width: 400px;
+        margin: 30px;
     }
-
-    .fa{
-        font-size: 100px;
-        margin-top: 50px;
-        color: #fc1d00;
+    
+    .content {
+        align-items: center;
+        bottom: 0;
+        color: #ffffff;
+        display: grid;
+        font-family: consolas;
+        left: 0;
+        padding: 20px;
+        position: absolute;
+        right: 0;
+        text-align: center;
+        top: 0;
+    }
+    
+    .content a {
+        border: 1px solid #ffffff;
+        color: #ffffff;
+        display: inline-block;
+        margin-top: 10px;
+        padding: 10px 20px;
+        text-decoration: none;
+        transition: background-color 0.5s ease,
+                    color 0.5s ease;
+    }
+    
+    .content a:hover {
+        background-color: #ffffff;
+        color: #000000;
+    }
+    .img{
+        border: 3px solid white;
+    }
+    
+    .box img {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        height: 100%;
+        left: 0;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        transition: clip-path 1s ease;
+        width: 100%;
+    }
+    
+    .box:hover img {
+        clip-path: polygon(0 0, 100% 0, 0 0, 0 100%);
     }
 }
